# rbvogui_common

./: .gitmodules  README.md
moveit/rbvogui_xl_lift_ur10e_moveit/: .setup_assistant  CMakeLists.txt  package.xml
moveit/rbvogui_xl_lift_ur10e_moveit/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  rbvogui.srdf  ros_controllers.yaml
moveit/rbvogui_xl_lift_ur10e_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rbvogui_moveit_controller_manager.launch.xml  rbvogui_xl_lift_ur10e_moveit_config.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rbsherpa_common/: CMakeLists.txt  package.xml
rbsherpa_hl_common/: CMakeLists.txt  package.xml
rbsherpa_hl_control/: CMakeLists.txt  package.xml
rbsherpa_hl_control/config/: pantilt_controllers.yaml  rbsherpa_hl_control_ackermann.yaml  rbsherpa_hl_control_ackermann_sim.yaml  rbsherpa_hl_control_omni.yaml  rbsherpa_hl_control_omni_sim.yaml  torso_controllers.yaml  twist_mux.yaml
rbsherpa_hl_control/config/gazebo/: gazebo_controller_ackermann.yaml  gazebo_controller_omni.yaml
rbsherpa_hl_control/launch/: rbsherpa_hl_control.launch  rbsherpa_hl_control_ackermann_sim.launch  rbsherpa_hl_control_omni_sim.launch  rbsherpa_hl_control_pan.launch  rbsherpa_hl_control_pantilt.launch  rbsherpa_hl_control_tilt.launch  rbsherpa_hl_control_torso.launch
rbsherpa_hl_pad/: CMakeLists.txt  package.xml
rbsherpa_hl_pad/config/: base_ps4_ackermann.yaml
rbsherpa_hl_pad/launch/: rbsherpa_hl_pad.launch
rbsherpa_hl_pad/src/: rbsherpa_hl_pad.cpp
rbsherpa_pad/: CMakeLists.txt  package.xml
rbsherpa_pad/config/: twist_mux.yaml
rbsherpa_pad/launch/: rbsherpa_pad.launch
rbvogui_common/: CMakeLists.txt  package.xml
rbvogui_common/debs/: ros-humble-ackermann-drive-controller_0.9.0-20240625.151204_amd64.deb  ros-humble-omni-ackermann-drive-controller_0.9.0-20240625.150811_amd64.deb  ros-humble-robotnik-msgs_2.2.0-20240625.150855-bb2064d_amd64.deb  ros-humble-robotnik-sensors-gazebo_1.1.2-20240926.132423-5cbd8a6_amd64.deb
rbvogui_common/moveit/rbvogui_moveit_ur10/: CMakeLists.txt
rbvogui_common/moveit/rbvogui_xl_2ur10_e_moveit/: package.xml
rbvogui_control/: CMakeLists.txt  package.xml
rbvogui_control/config/: rbvogui_control_ackermann_sim.yaml  rbvogui_control_omni_sim.yaml  robot_ackermann_4s_control_sim.yaml  robot_ackermann_control.yaml  robot_diff_control.yaml  robot_diff_control_sim.yaml  robot_omni_control.yaml  robot_omni_control_sim.yaml  robot_skid_6w_control_sim.yaml  twist_mux.yaml
rbvogui_control/config/arm_config/: arm_control.yaml
rbvogui_control/config/calibration/: ur10e_default.yaml  ur5_joint_limits.yaml
rbvogui_control/config/gazebo/: gazebo_controller_ackermann.yaml  gazebo_controller_omni.yaml
rbvogui_control/config/onrobot/: 2fg7_control.yaml  rg2_control.yaml
rbvogui_control/config/robotiq/: 2f_85_control.yaml  hand_e_control.yaml
rbvogui_control/launch/: onrobot_control.launch  rbvogui_control.launch  robotiq_control.launch  schunk_control.launch  ur_control.launch
rbvogui_description/: CMakeLists.txt  LICENSE  package.xml
rbvogui_description/config/: controllers.yaml
rbvogui_description/debs/: ros-humble-ackermann-drive-controller_0.9.0-20240625.090322_amd64.deb  ros-humble-omni-ackermann-drive-controller_0.9.0-20240625.091324_amd64.deb  ros-humble-robotnik-interfaces_2.2.0-20240625.150852-bb2064d_amd64.deb
rbvogui_description/launch/: cart_state_publisher.launch.py  description.launch.py  gazebo.launch.py  rbvogui.rviz  rbvogui_rviz.launch  rbvogui_state.launch  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  test.launch.py  view.launch.py
rbvogui_description/robot/: rbvogui_6w_std.urdf.xacro  rbvogui_std.urdf.xacro  rbvogui_std_ur10.urdf.xacro  rbvogui_std_v2.urdf.xacro  rbvogui_xl_lift_ur10e.urdf.xacro  rbvogui_xl_std.urdf.xacro  test.urdf.xacro
rbvogui_description/robots/: rbvogui.urdf.xacro  rbvogui_6w_std.urdf.xacro  rbvogui_6w_std_basket.urdf.xacro  rbvogui_std.urdf.xacro  rbvogui_std_basket.urdf.xacro  rbvogui_std_ur10.urdf.xacro  rbvogui_std_ur10_egh.urdf.xacro  rbvogui_std_ur10_rg2.urdf.xacro  rbvogui_std_ur5.urdf.xacro  rbvogui_std_ur5_rg2.urdf.xacro  rbvogui_std_v2.urdf.xacro  rbvogui_std_v3.urdf.xacro  rbvogui_ur5e.urdf.xacro  rbvogui_xl.urdf.xacro  rbvogui_xl_ackermann.urdf.xacro  rbvogui_xl_biarm.urdf.xacro  rbvogui_xl_lift_ur10e.urdf.xacro  rbvogui_xl_lift_ur10e_hand_e.urdf.xacro  rbvogui_xl_std.urdf.xacro
rbvogui_description/rviz/: view_robot.rviz
rbvogui_description/test/: empty.yaml  test.urdf  test_urdf_xacro.py
rbvogui_description/urdf/: inertia.urdf.xacro  ros2_control.urdf.xacro  ros2_control_ackermann.urdf.xacro
rbvogui_docking/: CMakeLists.txt  package.xml
rbvogui_docking/launch/: rbvogui_docking.launch.py
rbvogui_docking/params/: default.yaml  rbvogui_docking.yaml
rbvogui_docking/scripts/: demo.py
rbvogui_docking/src/: dock_pose_publisher.cpp  static_dock_pose_publisher.cpp
rbvogui_navigation/: CMakeLists.txt  package.xml
rbvogui_navigation/config/: amcl.yaml  map_server.yaml  move_base_params.yaml  nav.yaml  nav2_params.yaml  nav_ackermann.yaml  nav_omni.yaml  slam_params.yaml  teb_local_planner_diff_params.yaml  teb_local_planner_params_ackermann.yaml  teb_local_planner_params_omni.yaml
rbvogui_navigation/launch/: dockers.launch  map_server.launch.py  mapping.launch.py  move.launch  move_base.launch  move_base_flex.launch  navigation.launch.py  navigation_complete.launch  scan_filter.launch
rbvogui_navigation/maps/: demo.pgm  demo.yaml  map.pgm  map.yaml  prueba_mapa.pgm  prueba_mapa.yaml
rbvogui_pad/: CMakeLists.txt  package.xml
rbvogui_pad/config/: base_ps4_ackermann.yaml  base_ps4_omni.yaml
rbvogui_pad/launch/: rbvogui_pad.launch
rbvogui_pad/src/: rbvogui_pad.cpp
(+581 files in other folders)
