<?xml version="1.0"?>
<package>
  <name>rbsherpa_hl_common</name>
  <version>0.0.0</version>
  <description>The rbsherpa_hl_common package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>
  <maintainer email="asoriano@robotnik.es">asoriano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

    <metapackage/>

  </export>

</package>
