<?xml version="1.0"?>
<package>
  <name>rbvogui_common</name>
  <version>0.0.0</version>
  <description>The rbvogui_common package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>
  <maintainer email="asoriano@robotnik.es">asoriano</maintainer>
  <maintainer email="jgomez@robotnik.es">asoriano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

    <metapackage/>

  </export>

</package>
