<?xml version="1.0"?>
<package>
  <name>rbvogui_control</name>
  <version>0.0.0</version>
  <description>The rbvogui_control package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>
  <maintainer email="asoriano@robotnik.es">asoriano</maintainer>
  <maintainer email="jgomez@robotnik.es">asoriano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>ackermann_msgs</buildtool_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rbvogui_pad</run_depend>

</package>
